modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/disallowed-tolerations/rendered/test_samples/pods/003-disallowed-toleration-equal.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-equal
    namespace: default
spec:
    containers:
        - image: nginx
          name: c
    tolerations:
        - key: dedicated
          operator: Equal
          value: gpu
