modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/disallowed-tolerations/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8disallowedtolerations
tests:
  - name: d8disallowedtolerations
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed-no-tolerations
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-allowed-no-tolerations.yaml
        assertions:
          - violations: "no"
      - name: disallowed-toleration-key
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-disallowed-toleration-key.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-toleration-equal
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-disallowed-toleration-equal.yaml
        assertions:
          - violations: "yes"
      - name: disallowed-toleration-noexecute-exists
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-disallowed-toleration-noexecute-exists.yaml
        assertions:
          - violations: "yes"
